# Switch-Control

./: .gitignore  CMakeLists.txt  README.md  index.html  partitions.csv  sdkconfig
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy-demo.yml
assets/: index-BfymVG9c.js  index-D1XWWRiI.css  index-DXBjpqi6.js
docs/: usage.md
main/: .clang-format  CMakeLists.txt  main.cpp
main/config/: ButtonConfig.cpp  ButtonConfig.h  ConfigurationStorage.cpp  ConfigurationStorage.h  GpioConfig.cpp  GpioConfig.h  ServoConfig.cpp  ServoConfig.h  WiFiConfig.cpp  WiFiConfig.h
main/controller/: OperationController.cpp  OperationController.h
main/io/: ServoOutChannel.cpp  ServoOutChannel.h  SmartButtonChannel.cpp  SmartButtonChannel.h  TouchButton.cpp  TouchButton.h
main/srcp/: SrcpSocket.cpp  SrcpSocket.h
main/webserver/: AbstractRequestHandler.cpp  AbstractRequestHandler.h  ConfigurationServer.cpp  ConfigurationServer.h
main/webserver/requests/: ChannelConfig.cpp  ChannelConfig.h  ChannelStatus.cpp  ChannelStatus.h  EmbedFileGetRequest.cpp  EmbedFileGetRequest.h  OtaUpdateRequest.cpp  OtaUpdateRequest.h  Status.cpp  Status.h  WiFiConfig.cpp  WiFiConfig.h
main/wifi/: WiFiController.cpp  WiFiController.h
test/: CMakeLists.txt  testRunner.cpp
web/: .env.development  .env.production  .gitignore  README.md  index.html  openapi.yaml  package-lock.json  package.json  vite.config.js
web/src/: App.vue  api.js  main.js  mockApi.js
web/src/components/: ChannelForm.vue  DeviceInfo.vue  LazyApp.vue  WiFiForm.vue
web/src/components/items/: CardSection.vue  CollapsableCard.vue  LanguageSwitcher.vue  ServoTimeSlider.vue
web/src/i18n/: index.js  translation.js
web/src/i18n/locales/: de.json  en.json
web/src/store/: capabilities.js  index.js
